--- a/Draw/BBS/Controller/View/BBSPostActionCell.xib
+++ b/Draw/BBS/Controller/View/BBSPostActionCell.xib
@@ -43,12 +43,12 @@
 						<string key="NSFrameSize">{45, 45}</string>
 						<reference key="NSSuperview" ref="594756960"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="833515713"/>
+						<reference key="NSNextKeyView" ref="529114556"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIImageView" id="833515713">
+					<object class="IBUIImageView" id="529114556">
 						<reference key="NSNextResponder" ref="594756960"/>
 						<int key="NSvFlags">276</int>
 						<string key="NSFrame">{{50, 0}, {245, 168}}</string>
@@ -130,7 +130,7 @@
 						<string key="NSFrame">{{78, 30}, {170, 45}}</string>
 						<reference key="NSSuperview" ref="594756960"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1071380811"/>
+						<reference key="NSNextKeyView" ref="321176243"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -172,7 +172,6 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<string key="IBUINormalTitle">CM(3)</string>
 						<reference key="IBUIHighlightedTitleColor" ref="292415590"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">3</int>
@@ -181,10 +180,6 @@
 						<object class="NSColor" key="IBUINormalTitleShadowColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
-						</object>
-						<object class="NSCustomResource" key="IBUINormalImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">bbs_detail_reply@2x.png</string>
 						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
@@ -196,7 +191,7 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="1071380811">
+					<object class="IBUIImageView" id="321176243">
 						<reference key="NSNextResponder" ref="594756960"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{260, 38}, {16, 17}}</string>
@@ -206,10 +201,6 @@
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<object class="NSCustomResource" key="IBUIImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">bbs_detail_option_up@2x.png</string>
-						</object>
 					</object>
 				</array>
 				<string key="NSFrameSize">{300, 180}</string>
@@ -282,7 +273,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">option</string>
 						<reference key="source" ref="594756960"/>
-						<reference key="destination" ref="1071380811"/>
+						<reference key="destination" ref="321176243"/>
 					</object>
 					<int key="connectionID">37</int>
 				</object>
@@ -290,7 +281,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">bgImageView</string>
 						<reference key="source" ref="594756960"/>
-						<reference key="destination" ref="833515713"/>
+						<reference key="destination" ref="529114556"/>
 					</object>
 					<int key="connectionID">39</int>
 				</object>
@@ -332,8 +323,8 @@
 							<reference ref="966452623"/>
 							<reference ref="843713007"/>
 							<reference ref="351332590"/>
-							<reference ref="1071380811"/>
-							<reference ref="833515713"/>
+							<reference ref="321176243"/>
+							<reference ref="529114556"/>
 							<reference ref="658149072"/>
 						</array>
 						<reference key="parent" ref="0"/>
@@ -370,12 +361,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">36</int>
-						<reference key="object" ref="1071380811"/>
+						<reference key="object" ref="321176243"/>
 						<reference key="parent" ref="594756960"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">38</int>
-						<reference key="object" ref="833515713"/>
+						<reference key="object" ref="529114556"/>
 						<reference key="parent" ref="594756960"/>
 					</object>
 				</array>
@@ -406,6 +397,31 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">BBSPostActionCell</string>
 					<string key="superclassName">BBSTableViewCell</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">clickRepyButton:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">clickRepyButton:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">clickRepyButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="option">UIImageView</string>
+						<string key="reply">UIButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="option">
+							<string key="name">option</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="reply">
+							<string key="name">reply</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/BBSPostActionCell.h</string>
@@ -414,6 +430,40 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">BBSTableViewCell</string>
 					<string key="superclassName">PPTableViewCell</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="avatar">UIImageView</string>
+						<string key="bgImageView">UIImageView</string>
+						<string key="content">UILabel</string>
+						<string key="image">UIImageView</string>
+						<string key="nickName">UILabel</string>
+						<string key="timestamp">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="avatar">
+							<string key="name">avatar</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bgImageView">
+							<string key="name">bgImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="content">
+							<string key="name">content</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="image">
+							<string key="name">image</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="nickName">
+							<string key="name">nickName</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="timestamp">
+							<string key="name">timestamp</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/BBSTableViewCell.h</string>
@@ -433,11 +483,10 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="bbs_detail_option_up@2x.png">{31, 33}</string>
-			<string key="bbs_detail_reply@2x.png">{32, 31}</string>
-			<string key="bbs_post_content_bg@2x.png">{165, 160}</string>
-		</dictionary>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">bbs_post_content_bg@2x.png</string>
+			<string key="NS.object.0">{165, 160}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
 </archive>
