finish user action list

--- a/Draw/BBS/Controller/View/BBSUserActionCell.xib
+++ b/Draw/BBS/Controller/View/BBSUserActionCell.xib
@@ -36,13 +36,28 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="843713007">
+					<object class="IBUIImageView" id="301737793">
 						<reference key="NSNextResponder" ref="594756960"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{12, 6}, {51, 51}}</string>
+						<int key="NSvFlags">276</int>
+						<string key="NSFrame">{{50, 0}, {245, 239}}</string>
 						<reference key="NSSuperview" ref="594756960"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="966452623"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">bbs_post_content_bg@2x.png</string>
+						</object>
+					</object>
+					<object class="IBUIImageView" id="843713007">
+						<reference key="NSNextResponder" ref="594756960"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrameSize">{45, 45}</string>
+						<reference key="NSSuperview" ref="594756960"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="301737793"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -50,7 +65,7 @@
 					<object class="IBUILabel" id="966452623">
 						<reference key="NSNextResponder" ref="594756960"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{72, 8}, {149, 21}}</string>
+						<string key="NSFrame">{{78, 9}, {124, 21}}</string>
 						<reference key="NSSuperview" ref="594756960"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="351332590"/>
@@ -82,7 +97,7 @@
 					<object class="IBUILabel" id="351332590">
 						<reference key="NSNextResponder" ref="594756960"/>
 						<int key="NSvFlags">289</int>
-						<string key="NSFrame">{{226, 6}, {86, 21}}</string>
+						<string key="NSFrame">{{202, 9}, {82, 21}}</string>
 						<reference key="NSSuperview" ref="594756960"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="683632117"/>
@@ -111,14 +126,14 @@
 					<object class="IBUILabel" id="683632117">
 						<reference key="NSNextResponder" ref="594756960"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{72, 35}, {240, 45}}</string>
+						<string key="NSFrame">{{78, 35}, {206, 45}}</string>
 						<reference key="NSSuperview" ref="594756960"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="188712504"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwIDAgMC40NgA</bytes>
+						<object class="NSColor" key="IBUIBackgroundColor" id="689258879">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -126,44 +141,36 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Content</string>
-						<object class="NSColor" key="IBUITextColor">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MQA</bytes>
-						</object>
+						<reference key="IBUITextColor" ref="249638129"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUINumberOfLines">0</int>
 						<reference key="IBUIFontDescription" ref="862346347"/>
 						<reference key="IBUIFont" ref="262074176"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-						<double key="preferredMaxLayoutWidth">240</double>
+						<double key="preferredMaxLayoutWidth">206</double>
 					</object>
 					<object class="IBUIImageView" id="188712504">
 						<reference key="NSNextResponder" ref="594756960"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{72, 90}, {85, 80}}</string>
+						<string key="NSFrame">{{78, 92}, {85, 80}}</string>
 						<reference key="NSSuperview" ref="594756960"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="167618898"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MSAwIDAAA</bytes>
-						</object>
+						<reference key="IBUIBackgroundColor" ref="689258879"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 					<object class="IBUILabel" id="167618898">
 						<reference key="NSNextResponder" ref="594756960"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{72, 180}, {240, 50}}</string>
+						<string key="NSFrame">{{78, 180}, {206, 50}}</string>
 						<reference key="NSSuperview" ref="594756960"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="147781525"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">2</int>
-							<bytes key="NSRGB">MC40IDAuNzcyNTQ5MDE5NiAwLjI3ODQzMTM3MjUgMC40MgA</bytes>
-						</object>
+						<reference key="IBUIBackgroundColor" ref="689258879"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -184,18 +191,28 @@
 							<int key="NSfFlags">16</int>
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-						<double key="preferredMaxLayoutWidth">240</double>
+						<double key="preferredMaxLayoutWidth">206</double>
+					</object>
+					<object class="IBUIView" id="147781525">
+						<reference key="NSNextResponder" ref="594756960"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{78, 200}, {206, 1}}</string>
+						<reference key="NSSuperview" ref="594756960"/>
+						<reference key="NSWindow"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4zMTM3MjU0OTAyIDAuNzQ1MDk4MDM5MiAwLjE0NTA5ODAzOTIAA</bytes>
+						</object>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 240}</string>
+				<string key="NSFrameSize">{300, 250}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="843713007"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
-				<object class="NSColor" key="IBUIBackgroundColor">
-					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
-				</object>
+				<reference key="IBUIBackgroundColor" ref="689258879"/>
 				<object class="IBUISimulatedSizeMetrics" key="IBUISimulatedDestinationMetrics">
 					<string key="IBUISimulatedSizeMetricsClass">IBUISimulatedFreeformSizeMetricsSentinel</string>
 					<string key="IBUIDisplayName">Freeform</string>
@@ -253,6 +270,22 @@
 					</object>
 					<int key="connectionID">37</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">bgImageView</string>
+						<reference key="source" ref="594756960"/>
+						<reference key="destination" ref="301737793"/>
+					</object>
+					<int key="connectionID">39</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">splitLine</string>
+						<reference key="source" ref="594756960"/>
+						<reference key="destination" ref="147781525"/>
+					</object>
+					<int key="connectionID">42</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -277,11 +310,13 @@
 						<int key="objectID">12</int>
 						<reference key="object" ref="594756960"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="188712504"/>
 							<reference ref="683632117"/>
-							<reference ref="966452623"/>
-							<reference ref="843713007"/>
 							<reference ref="351332590"/>
+							<reference ref="843713007"/>
+							<reference ref="966452623"/>
+							<reference ref="301737793"/>
+							<reference ref="188712504"/>
+							<reference ref="147781525"/>
 							<reference ref="167618898"/>
 						</array>
 						<reference key="parent" ref="0"/>
@@ -316,6 +351,16 @@
 						<reference key="object" ref="167618898"/>
 						<reference key="parent" ref="594756960"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">38</int>
+						<reference key="object" ref="301737793"/>
+						<reference key="parent" ref="594756960"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">40</int>
+						<reference key="object" ref="147781525"/>
+						<reference key="parent" ref="594756960"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -330,29 +375,35 @@
 				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="36.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="38.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="40.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">37</int>
+			<int key="maxID">42</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
-					<string key="className">BBSUserActionCell</string>
+					<string key="className">BBSTableViewCell</string>
 					<string key="superclassName">PPTableViewCell</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="avatar">UIImageView</string>
+						<string key="bgImageView">UIImageView</string>
 						<string key="content">UILabel</string>
 						<string key="image">UIImageView</string>
 						<string key="nickName">UILabel</string>
-						<string key="source">UILabel</string>
 						<string key="timestamp">UILabel</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="avatar">
 							<string key="name">avatar</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bgImageView">
+							<string key="name">bgImageView</string>
 							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="content">
@@ -367,13 +418,31 @@
 							<string key="name">nickName</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="timestamp">
+							<string key="name">timestamp</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/BBSTableViewCell.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">BBSUserActionCell</string>
+					<string key="superclassName">BBSTableViewCell</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="source">UILabel</string>
+						<string key="splitLine">UIView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="source">
 							<string key="name">source</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="timestamp">
-							<string key="name">timestamp</string>
-							<string key="candidateClassName">UILabel</string>
+						<object class="IBToOneOutletInfo" key="splitLine">
+							<string key="name">splitLine</string>
+							<string key="candidateClassName">UIView</string>
 						</object>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -395,6 +464,10 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">bbs_post_content_bg@2x.png</string>
+			<string key="NS.object.0">{165, 160}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
 </archive>
