--- a/Draw/BBS/Controller/View/BBSPostDetailCell.xib
+++ b/Draw/BBS/Controller/View/BBSPostDetailCell.xib
@@ -165,7 +165,6 @@
 						<string key="NSFrame">{{250, 155}, {40, 15}}</string>
 						<reference key="NSSuperview" ref="137148075"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -378,39 +377,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">BBSPostDetailCell</string>
 					<string key="superclassName">BBSTableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="clickCommentButton:">id</string>
-						<string key="clickSupportButton:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="clickCommentButton:">
-							<string key="name">clickCommentButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="clickSupportButton:">
-							<string key="name">clickSupportButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="comment">UIButton</string>
-						<string key="reward">UIButton</string>
-						<string key="support">UIButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="comment">
-							<string key="name">comment</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="reward">
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">reward</string>
+						<string key="NS.object.0">UIButton</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">reward</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
 							<string key="name">reward</string>
 							<string key="candidateClassName">UIButton</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="support">
-							<string key="name">support</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-					</dictionary>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/BBSPostDetailCell.h</string>
